deployments/testwebsite/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testwebsite
  labels:
    app: testwebsite
  namespace: default
spec:
  selector:
    matchLabels:
      app: testwebsite
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: testwebsite
    spec:
      containers:
        - name: testwebsite
          image: registry.lab.lcarilla.de/website:1.0.0 # {"$imagepolicy": "default:testwebsite"}
          ports:
            - containerPort: 80
