deployments/testwebsite/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: testwebsite
  labels:
    app: testwebsite
spec:
  type: ClusterIP
  selector:
    app: testwebsite
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: testwebsite
