deployments/testwebsite/deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testwebsite
  namespace: default
spec:
  rules:
    - host: testweb.my.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testwebsite
                port:
                  number: 80
